--- a/books.html
+++ b/books.html
@@ -567,7 +567,7 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <h1>Transform Your Reality</h1>
-                    <p>Discover the profound truth that has been hidden in plain sight through "You Never Left Eden" - a revolutionary book that will transform your consciousness and awaken your divine nature. Choose from multiple formats and bundles to begin your journey.</p>
+                    <p>Discover the profound truth that has been hidden in plain sight through "You Never Left Eden" - a revolutionary book that will transform your consciousness and awaken your divine nature. Choose from digital, paperback, or premium hardback editions to begin your journey.</p>
                     <div class="hero-cta">
                         <a href="https://square.link/u/A953t7Hr" class="btn btn-primary">Get The Book Now</a>
                         <a href="#email-capture" class="btn btn-secondary">Get Free Chapter</a>
@@ -585,7 +585,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>Choose Your Journey</h2>
-                <p>Start your journey with a free chapter, then choose your path to consciousness expansion</p>
+                <p>Start your journey with a free chapter, then choose from digital, paperback, or premium hardback editions</p>
             </div>
 
             <div class="product-grid">
@@ -606,15 +606,43 @@
                 <!-- Digital Book -->
                 <div class="product-card">
                     <div class="product-icon">📖</div>
-                    <h3>Digital Book</h3>
-                    <div class="product-price">$17</div>
+                    <h3>Digital Book (PDF)</h3>
+                    <div class="product-price">$9.99</div>
                     <ul class="product-features">
                         <li>Complete "You Never Left Eden" PDF</li>
                         <li>Instant digital download</li>
                         <li>Transform your consciousness</li>
                         <li>Read on any device</li>
                     </ul>
-                    <a href="https://square.link/u/A953t7Hr" class="btn btn-primary">Start Reading</a>
+                    <a href="https://square.link/u/A953t7Hr" class="btn btn-primary">Download Now</a>
+                </div>
+
+                <!-- Hardback Book -->
+                <div class="product-card">
+                    <div class="product-icon">📚</div>
+                    <h3>Hardback Book</h3>
+                    <div class="product-price">$49.98</div>
+                    <ul class="product-features">
+                        <li>Premium hardcover edition</li>
+                        <li>High-quality paper & binding</li>
+                        <li>Collector's item quality</li>
+                        <li>Perfect for gifting</li>
+                    </ul>
+                    <a href="https://square.link/u/bnGlypnl" class="btn btn-primary">Order Hardback</a>
+                </div>
+
+                <!-- Paperback Book -->
+                <div class="product-card">
+                    <div class="product-icon">📄</div>
+                    <h3>Paperback Book</h3>
+                    <div class="product-price">$24.99</div>
+                    <ul class="product-features">
+                        <li>Affordable paperback edition</li>
+                        <li>Easy to carry & read</li>
+                        <li>Same transformational content</li>
+                        <li>Perfect for daily study</li>
+                    </ul>
+                    <a href="https://square.link/u/9hY27OqV" class="btn btn-primary">Order Paperback</a>
                 </div>
 
                 <!-- Audiobook -->
@@ -651,15 +679,15 @@
                 <!-- Complete Bundle -->
                 <div class="product-card">
                     <div class="product-icon">💎</div>
-                    <h3>Complete Bundle</h3>
+                    <h3>Complete Digital Bundle</h3>
                     <div class="product-price">$47</div>
                     <ul class="product-features">
-                        <li>Digital book + Audiobook</li>
+                        <li>Digital book (PDF) + Audiobook</li>
                         <li>Full workbook included</li>
                         <li>All formats instantly</li>
-                        <li>Best value package</li>
+                        <li>Best digital value package</li>
                     </ul>
-                    <a href="https://square.link/u/7K4TPYQt" class="btn btn-primary">Get Everything</a>
+                    <a href="https://square.link/u/7K4TPYQt" class="btn btn-primary">Get Digital Bundle</a>
                 </div>
 
                 <!-- Temple Access -->
@@ -777,7 +805,9 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Books & Resources</h3>
-                    <a href="https://square.link/u/A953t7Hr">Digital Book</a>
+                    <a href="https://square.link/u/A953t7Hr">Digital Book (PDF)</a>
+                    <a href="https://square.link/u/9hY27OqV">Paperback Book</a>
+                    <a href="https://square.link/u/bnGlypnl">Hardback Book</a>
                     <a href="https://square.link/u/iBLVYLEQ">Audiobook</a>
                     <a href="https://square.link/u/7K4TPYQt">Complete Bundle</a>
                     <a href="https://square.link/u/7wKyFAHg">Workbook</a>
