--- a/sections/sacred-books.html
+++ b/sections/sacred-books.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sacred Books - Divine Temple</title>
+    
+    <!-- Performance Optimized CSS -->
+    <link rel="stylesheet" href="../css/performance-optimized.css">
+    
     <style>
         :root {
             --accent-gold: #d4af37;
@@ -80,6 +84,7 @@
             grid-template-columns: 300px 1fr 350px;
             gap: 2rem;
             min-height: 80vh;
+            contain: layout style paint;
         }
 
         .books-sidebar {
